--- a/ajax/libs/apexcharts/package.json
+++ b/ajax/libs/apexcharts/package.json
@@ -1,8 +1,7 @@
 {
   "name": "apexcharts",
   "description": "A JavaScript Chart Library",
-  "version": "1.1.3",
-  "filename": "dist/apexcharts.min.js",
+  "filename": "apexcharts.min.js",
   "author": {
     "name": "Juned Chhipa",
     "email": "juned.chhipa@gmail.com"
@@ -18,16 +17,13 @@
     "type": "git",
     "url": "https://github.com/apexcharts/apexcharts.js"
   },
-   "autoupdate": {
-    "source": "git",
-    "target": "git://github.com/apexcharts/apexcharts.git",
-    "fileMap": [
-      {
-        "basePath": "dist",
-        "files": [
-          "**/*"
-        ]
-      }
-    ]
-  },
+  "npmName": "apexcharts",
+  "npmFileMap": [
+    {
+      "basePath": "dist",
+      "files": [
+        "apexcharts.min.js"
+      ]
+    }
+  ],
 }
